--- a/Website/downloads.html
+++ b/Website/downloads.html
@@ -30,7 +30,7 @@
     <h3>Villmanity 1.0.0 | Minecraft 1.17.1</h3>
       <cindent class="box">
         <h3>Snapshot D220327A</h3>
-        <a href="https://github.com/Villmanity/Villmanity.github.io/raw/main/downloads/1.17.1/1.0.0/Villmanity_1.17.1_D220327A.zip">Download</a>
+        <a href="https://github.com/Villmanity/Villmanity.github.io/raw/main/Downloads/1.17.1/1.0.0/Villmanity_1.17.1_D220327A.zip">Download</a>
         <ul>
           <li>Added support for breeding red shirt children.</li>
           <li>Added all general tasks for children.</li>
